--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,5 +3,6 @@
 {% block body %}
 <div class="home">
     <h1>Bienvenue sur la Popina</h1>
+    <p>Vous êtes connecté en tant que {{ app.user.username }}.</p>
 </div>
 {% endblock %}
