--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,23 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand" href="#">Popina</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Menu1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Menu2</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
             {% block body %}{% endblock %}
         </div>
