--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Login</h1>
+    <h1>{% trans %}Login{% endtrans %}</h1>
     <form action="{{ path('login') }}" method="POST">
         <div class="form-group">
-            <input class="form-control" type="text" placeholder="Adresse email" required, name="_username">
+            <input class="form-control" type="text" placeholder="{% trans %}Email{% endtrans %}" required name="_username">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" placeholder="Mot de passe" required, name="_password">
+            <input class="form-control" type="password" placeholder="{% trans %}Password{% endtrans %}" required name="_password">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-success">Valider</button>
+            <button type="submit" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
         </div>
     </form>
 {% endblock %}
