--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,24 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Popina{% endblock %}</title>
+        {% block stylesheets %}{% endblock %}
 
-        {% block head_css %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        {% endblock %}
-        {% block head_js %}
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        {% endblock %}
-
-        {% block stylesheets %}
-
-        {% endblock %}
+        {{ encore_entry_link_tags('app') }}
+        {{ encore_entry_script_tags('app') }}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">Popina</a>
+            <a class="navbar-brand" href="{{ path('home') }}">Popina</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,16 +18,18 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Menu2</a>
+                        <a class="nav-link" href="{{ path('login') }}">{{ 'admin'|trans }}</a>
                     </li>
                 </ul>
             </div>
         </nav>
+
         <div class="container">
-            {% block body %}{% endblock %}
+            {% block body %}
+                <h2>{{ 'welcome'|trans }}</h2>
+                <a class="btn btn-primary" href="{{ path('login') }}">{{ 'login'|trans }}</a>
+                <a class="btn btn-primary" href="{{ path('register') }}">{{ 'register'|trans }}</a>
+            {% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
     </body>
