--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>{% trans %}Register{% endtrans %}</h1>
+    <h1>{{ 'register'|trans }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
