--- a/templates/form/new.html.twig
+++ b/templates/form/new.html.twig
@@ -1,15 +1,19 @@
-{# templates/form/new.html.twig #}
+{% extends 'base.html.twig' %}
 
-{% for message in app.flashes('notice') %}
-    <div class="flash-notice">{{ message }}</div>
-{% endfor %}
+{% block body %}
 
-{% for label, messages in app.flashes %}
-    {% for message in messages %}
-        <div class="flash-{{ label }}">
-            {{ message }}
-        </div>
+    {% for message in app.flashes('notice') %}
+        <div class="flash-notice">{{ message }}</div>
     {% endfor %}
-{% endfor %}
 
-{{ form(form) }}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+    {{ form(form) }}
+
+{% endblock %}
