--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
 <div class="home">
-    <p>Vous êtes connecté en tant que {{ app.user.username }}.</p>
+    {% for restaurant in restaurants %}
+            <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="/uploads/photos/{{ restaurant.photo }}" alt="Card image cap">
+                    <div class="card-body">
+                            <h5 class="card-title">{{ restaurant.nom }}</h5>
+                            <p class="card-text">{{ restaurant.adresse }}</p>
+                            <a href="{{ path('restaurant-detail', {id: restaurant.id}) }}" class="btn btn-primary">Détails</a>
+                    </div>
+            </div>
+    {% endfor %}
 </div>
+
 {% endblock %}
