traduction formulaire ajout resto & redirection ajout resto & page detail resto admin

--- a/templates/form/new.html.twig
+++ b/templates/form/new.html.twig
@@ -13,7 +13,7 @@
             </div>
         {% endfor %}
     {% endfor %}
-
+    <h1>{{ 'ajout_restau_titre'|trans }}</h1>
     {{ form(form) }}
 
 {% endblock %}
