formulaire carte & traduction

--- a/templates/form/add-boisson.html.twig
+++ b/templates/form/add-boisson.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ 'ajout_boisson_titre'|trans }}</h1>
+    <h1>{{ 'titre.boisson'|trans }}</h1>
     {{ form(boisson) }}
 
 {% endblock %}
