--- a/templates/form/add-dessert.html.twig
+++ b/templates/form/add-dessert.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ 'ajout_dessert_titre'|trans }}</h1>
+    <h1>{{ 'titre.dessert'|trans }}</h1>
     {{ form(dessert) }}
 
 {% endblock %}
