--- a/templates/form/add-plat.html.twig
+++ b/templates/form/add-plat.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ 'ajout_plat_titre'|trans }}</h1>
+    <h1>{{ 'titre.plat'|trans }}</h1>
     {{ form(plat) }}
 
 {% endblock %}
