--- a/templates/form/new.html.twig
+++ b/templates/form/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ 'ajout_restau_titre'|trans }}</h1>
+    <h1>{{ 'titre_restau'|trans }}</h1>
     {{ form(form) }}
 
 {% endblock %}
