--- a/templates/form/add-entree.html.twig
+++ b/templates/form/add-entree.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>{{ 'ajout_entree_titre'|trans }}</h1>
+    <h1>{{ 'titre.entree'|trans }}</h1>
     {{ form(entree) }}
 
 {% endblock %}
