--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,8 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin') }}">{{ 'global.admin'|trans }}</a>
-                    </li>
                     {% if app.user %}
+                        <li class="nav-item"><span class="nav-link">Connecté en tant que : {{ app.user.username }}</span></li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('logout') }}">{{ 'global.logout'|trans }}</a>
                         </li>
@@ -30,10 +28,7 @@
         </nav>
 
         <div class="container">
-            {% block body %}
-                <h2>{{ 'global.welcome'|trans }}</h2>
-                <a class="btn btn-primary" href="{{ path('login') }}">{{ 'global.login'|trans }}</a>
-                <a class="btn btn-primary" href="{{ path('register') }}">{{ 'global.register'|trans }}</a>
+            {% block content %}
             {% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
