--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,18 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
 
 <div class="home">
-    {% for restaurant in restaurants %}
-            <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="/uploads/photos/{{ restaurant.photo }}" alt="Card image cap">
+    <div class="container">
+        <div class="row">
+            {% for restaurant in restaurants %}
+                <div class="col-sm card">
+                    <img class="card-img-top" src="/uploads/photos/{{ restaurant.photo }}" alt="Image restaurant">
                     <div class="card-body">
-                            <h5 class="card-title">{{ restaurant.nom }}</h5>
-                            <p class="card-text">{{ restaurant.adresse }}</p>
-                            <a href="{{ path('restaurant-detail', {id: restaurant.id}) }}" class="btn btn-primary">Détails</a>
+                        <h5 class="card-title">{{ restaurant.nom }}</h5>
+                        <p class="card-text">{{ restaurant.adresse }}</p>
+                        <a href="{{ path('restaurant_detail', {id: restaurant.id}) }}" class="btn btn-primary">Détails</a>
                     </div>
-            </div>
-    {% endfor %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
