--- a/templates/back/form/add-plat.html.twig
+++ b/templates/back/form/add-plat.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'front/base.html.twig' %}
 
-{% block body %}
+{% block content %}
 
     <h1>{{ 'titre.plat'|trans }}</h1>
     {{ form(plat) }}
