--- a/templates/front/form/contact.html.twig
+++ b/templates/front/form/contact.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'front/base.html.twig' %}
 
 {% block content %}
     <h1>{{ 'global.contact'|trans }}</h1>
