--- a/templates/back/admin.html.twig
+++ b/templates/back/admin.html.twig
@@ -22,4 +22,6 @@
             {% endfor %}
             </tbody>
     </table>
+
+    <a href="{{ path('add_restaurant') }}">Ajouter un restaurant</a>
 {% endblock %}
