--- a/templates/back/restaurant-detail-admin.html.twig
+++ b/templates/back/restaurant-detail-admin.html.twig
@@ -40,10 +40,10 @@
            <img  src="/uploads/photos/{{restaurant.photo}}" />  
         </div>
 
-        <a href="{{path('add-entree', {id:restaurant.id})}}"> Ajouter une entrée </a>
-        <a href="{{path('add-plat', {id:restaurant.id})}}"> Ajouter un plat </a>
-        <a href="{{path('add-dessert', {id:restaurant.id})}}"> Ajouter un dessert </a>
-        <a href="{{path('add-boisson', {id:restaurant.id})}}"> Ajouter une boisson </a>
+        <a href="{{path('add_entree', {id:restaurant.id})}}"> Ajouter une entrée </a>
+        <a href="{{path('add_plat', {id:restaurant.id})}}"> Ajouter un plat </a>
+        <a href="{{path('add_dessert', {id:restaurant.id})}}"> Ajouter un dessert </a>
+        <a href="{{path('add_boisson', {id:restaurant.id})}}"> Ajouter une boisson </a>
     </div>
 
 {% endblock %}
