--- a/templates/front/restaurant-detail.html.twig
+++ b/templates/front/restaurant-detail.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="home">
-        <h1>Detail de {{restaurant.nom}}</h1>
+        <h1>Détail de {{restaurant.nom}}</h1>
         <div>
             <img  src="/uploads/photos/{{restaurant.photo}}" />
             <p>{{ 'restaurant.adresse'|trans }} : {{restaurant.adresse}}</p>
