--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -10,8 +10,9 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="{{ path('home') }}">Popina</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <img id="iconHeader" src="/icon.png" alt="logo de l'application"/>
+            <a class="navbar-brand homeButtonHeader" href="{{ path('home') }}">Popina</a>
+            <button class="navbar-toggler" type="butston" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -33,4 +34,8 @@
         </div>
         {% block javascripts %}{% endblock %}
     </body>
+
+    <footer>
+        <span>La Popina - 2019 - Lola Gauchet, Peter Brejassou</span>
+    </footer>
 </html>
