--- a/templates/front/security/login.html.twig
+++ b/templates/front/security/login.html.twig
@@ -4,15 +4,15 @@
     <h1>{{ 'global.login'|trans }}</h1>
     <form action="{{ path('login') }}" method="POST">
         <div class="form-group">
-            <input class="form-control" type="text" placeholder="{{ 'form.email'|trans }}" required name="_username">
+            <input class="form-control uppercaseFirstLetter" type="text" placeholder="{{ 'form.email'|trans }}" required name="_username">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" placeholder="{{ 'form.password'|trans }}" required name="_password">
+            <input class="form-control uppercaseFirstLetter" type="password" placeholder="{{ 'form.password'|trans }}" required name="_password">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">{{ 'form.save'|trans }}</button>
+            <button type="submit" class="btn btn-primary uppercaseFirstLetter">{{ 'form.save'|trans }}</button>
         </div>
 
-        <a class="btn btn-primary" href="{{ path('register') }}">{{ 'global.no-account'|trans }} {{ 'global.register'|trans }}</a>
+        <a class="btn btn-primary uppercaseFirstLetter" href="{{ path('register') }}">{{ 'global.no_account'|trans }} {{ 'global.register'|trans }}</a>
     </form>
 {% endblock %}
