--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,4 +4,87 @@ h1{
   text-align: center;
 }
 
+nav{
+  background-color: #a89d8c;
+}
+.navbar-brand:hover{
+  color: #426782;
+} 
+
+.card{
+  box-shadow: 6px 5px 31px -11px rgba(168,157,140,1);
+  &--container{
+    padding: 40px 10px; 
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px 40px;
+  }
+  &-body{
+    .btn{
+      background-color: #d5cabc;
+      &:hover{
+        background-color: #a89d8c;
+      }
+    }
+  }
+  &--type{
+    position: absolute;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    color: #426782;
+    font-size: 10px;
+    right: 10px;
+    top: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    z-index: 2;
+  }
+
+  &--img{
+    height: 200px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+
+    &:after{
+      position: absolute;
+      content: " ";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #000;;
+      opacity: .3;
+      z-index: 1;
+    }
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.restaurant{
+ 
+  &--infos{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px 40px;
+  }
+  &--img{
+    width: 100%;
+    img{
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  &--adresse{
+    padding: 20px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
+}
 
