--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -9,7 +9,7 @@
         {{ encore_entry_script_tags('app') }}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="{{ path('home') }}">Popina</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
