--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -102,9 +102,14 @@ nav{
   border-radius: 10px;
 }
 
+.linkFilter{
+  display: block;
+}
+
 footer{
   text-align: center;
   font-size: 10px;
   //background-color: lightgrey;
   padding: 15px 0;
 }
+
