--- a/templates/back/restaurant-detail-admin.html.twig
+++ b/templates/back/restaurant-detail-admin.html.twig
@@ -38,11 +38,30 @@
         </div>
 
         <div class="plat--infos"> 
-
+            <h3>Entrées</h3>
         {% for entree in entrees %}
             <p>{{entree.nom}}</p>
             <p>{{entree.description}}</p>
             <p>{{entree.prix}}</p>
+        {% endfor %}
+        <h3>Plats</h3>
+        {% for plat in plats %}
+            <p>{{plat.nom}}</p>
+            <p>{{plat.description}}</p>
+            <p>{{plat.prix}}</p>
+        {% endfor %}
+        <h3>Desserts</h3>
+        {% for dessert in desserts %}
+            <p>{{dessert.nom}}</p>
+            <p>{{dessert.description}}</p>
+            <p>{{dessert.prix}}</p>
+        {% endfor %}
+        <h3>Boissons</h3>
+        {% for boisson in boissons %}
+            <p>{{boisson.nom}}</p>
+            <p>{{boisson.description}}</p>
+            <p>{{boisson.prix}}</p>
+            <p>{{boisson.quantite}} cl</p>
         {% endfor %}
            
         </div>
