formulaire de contact & envoi de mail & traduction & ajout des cartes sur la page de detail du restaurant

--- a/templates/back/emails/contact-mail.html.twig
+++ b/templates/back/emails/contact-mail.html.twig
@@ -1,1 +1,6 @@
-<p>Contenu mail popina. Aurevoir.</p>
+
+<p>Vous avez reçu un message de la part de <strong>{{ name }} {{ lastname }}</strong> </p>
+<p> Son message : </p>
+<p>{{ content }} </p>
+
+<p> Pour le/la recontacter, par mail :  <strong>{{ mail }}</strong> ou par téléphone au <strong>{{ phone }}</strong> <p>
