--- a/templates/front/restaurant-detail.html.twig
+++ b/templates/front/restaurant-detail.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="home">
-        <h1>Détail de {{restaurant.nom}}</h1>
+        <h1>{{ 'global.restaurant_detail'|trans }} {{restaurant.nom}}</h1>
         <div>
             <img  src="/uploads/photos/{{restaurant.photo}}" />
             <p>{{ 'restaurant.adresse'|trans }} : {{restaurant.adresse}}</p>
@@ -16,25 +16,25 @@
         </div>
 
         <div class="plat--infos"> 
-            <h3>Entrées</h3>
+            <h3>{{ 'carte.entree'|trans }}</h3>
             {% for entree in entrees %}
                 <p>{{entree.nom}}</p>
                 <p>{{entree.description}}</p>
                 <p>{{entree.prix}}</p>
             {% endfor %}
-            <h3>Plats</h3>
+            <h3>{{ 'carte.plat'|trans }}</h3>
             {% for plat in plats %}
                 <p>{{plat.nom}}</p>
                 <p>{{plat.description}}</p>
                 <p>{{plat.prix}}</p>
             {% endfor %}
-            <h3>Desserts</h3>
+            <h3>{{ 'carte.dessert'|trans }}</h3>
             {% for dessert in desserts %}
                 <p>{{dessert.nom}}</p>
                 <p>{{dessert.description}}</p>
                 <p>{{dessert.prix}}</p>
             {% endfor %}
-            <h3>Boissons</h3>
+            <h3>{{ 'carte.boisson'|trans }}</h3>
             {% for boisson in boissons %}
                 <p>{{boisson.nom}}</p>
                 <p>{{boisson.description}}</p>
@@ -44,7 +44,7 @@
             
         </div>
 
-        <a href="{{ path('contact', {id: restaurant.id}) }}">Contacter le restaurateur</a>
+        <a href="{{ path('contact', {id: restaurant.id}) }}">{{ 'restaurant.contact'|trans }}</a>
     </div>
    
 {% endblock %}
