--- a/templates/back/form/update-restaurant.html.twig
+++ b/templates/back/form/update-restaurant.html.twig
@@ -1,8 +1,6 @@
 {% extends 'front/base.html.Twig' %}
 
 {% block content %}
-
-    <h1>{{ 'titre.dessert'|trans }}</h1>
-    {{ form(dessert) }}
-
+    <h1>Update restaurant</h1>
+    {{ form(update_restaurant) }}
 {% endblock %}
