--- a/templates/front/security/registration.html.twig
+++ b/templates/front/security/registration.html.twig
@@ -1,4 +1,4 @@
-{% extends 'front/base.html.twig' %}
+{% extends 'front/base.html.Twig' %}
 
 {% block content %}
     <h1>{{ 'global.register'|trans }}</h1>
